Removed autocomplete from inputs in 'Landing' + 'Words' states

--- a/app/templates/words.addword.html
+++ b/app/templates/words.addword.html
@@ -8,8 +8,8 @@
 <section id="add-word-view" class="sliding-content bga-dark">
   <!-- Add Word Input -->
   <header class="header-word-search">
-    <form id="form-add-word-search" name="formAddWordSearch">
-      <input type="text" id="add-word-input" name="searchAddWord" ng-model="words.searchAddWord" placeholder="scholarly" class="bga-dark" required>
+    <form id="form-add-word-search" name="formAddWordSearch" autocomplete="off">
+      <input type="text" id="add-word-input" name="searchAddWord" ng-model="words.searchAddWord" placeholder="scholarly" class="bga-dark" required autocomplete="off">
       <button type="submit" class="ion-search bg-gray"
         ng-click="words.searchWord()"
         ng-disabled="formAddWordSearch.$invalid"></button>
