Added '.blur()' to form input after form submission to remove keyboard

--- a/app/templates/words.html
+++ b/app/templates/words.html
@@ -6,6 +6,8 @@
 -->
 
 <main id="viewport">
+  <!-- App Navigation -->
+  <!-- <ng-include src="'/templates/appnav.html'"></ng-include> -->
   <!-- Words Content -->
   <section id="words-content" class="view-content">
     <!-- Words -->
@@ -14,6 +16,4 @@
     <!-- Add Word View -->
     <ng-include src="'/templates/words.addword.html'"></ng-include>
   </section>
-  <!-- App Navigation -->
-  <ng-include src="'/templates/appnav.html'"></ng-include>
 </main>
