--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -63,8 +63,7 @@
 
 #viewport .view-content {
   position: absolute;
-  top: 0;
-  bottom: 10%;
+  height: 100%;
   width: 100%;
 }
 
@@ -73,7 +72,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   position: absolute;
-  bottom: 0;
   height: 10%;
   width: 100%;
 }
