--- a/app/templates/words.userwords.html
+++ b/app/templates/words.userwords.html
@@ -22,7 +22,7 @@
         Found <span class="txt-theme">{{ filteredSearch.length }}</span> word<span ng-show="filteredSearch.length === 0 || filteredSearch.length > 1">s</span>.
       </div>
     </div>
-    <div id="btn-sort-user-words" ng-click="words.btnSortUserWords()">
+    <div id="btn-sort-user-words" class="bg-dark" ng-click="words.btnSortUserWords()">
       <!-- Sort: A-Z --->
       <div class="centered" ng-show="words.sortBy === 0">
         A <span class="ion-arrow-swap"></span> Z
