--- a/app/styles/words.css
+++ b/app/styles/words.css
@@ -16,6 +16,22 @@
   overflow: hidden;
 }
 
+#words-content .modal {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+
+#words-content .modal .word-item {
+  display: block;
+  position: relative;
+  min-height: 30%;
+  margin: 0;
+  border: 1px solid gray;
+  border-top-right-radius: 12px;
+}
+
 #words-content .header-word-search {
   position: relative;
   height: 15%;
@@ -50,6 +66,48 @@
   transition: opacity 0.2s ease;*/
 }
 
+#words-content .word-item {
+  display: grid;
+  grid-template-columns: 15% 85%;
+  position: relative;
+  min-height: 30%;
+  margin-bottom: 6px;
+  border: 1px solid gray;
+  border-top-right-radius: 12px;
+}
+
+#words-content .word-item:first-child {
+  margin-top: 6px;
+}
+
+#words-content .word-item.remove {
+  opacity: 0.8;
+}
+
+#words-content .word-name {
+  position: relative;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  font-style: italic;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  padding-left: 12px;
+  border-top-right-radius: 12px;
+}
+
+#words-content .word-success-rate {
+  position: absolute;
+  display: inline-block;
+  font-size: 1rem;
+  right: 12px;
+  height: 2rem;
+  line-height: 2rem;
+  padding: 0 6px;
+  border-radius: 6px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 #words-content .word-details {
   position: relative;
   padding: 6px 12px;
@@ -68,6 +126,33 @@
   width: 90%;
   left: 10%;
 }
+
+#words-content .modal-box {
+  box-shadow: 1px 1px 80px black;
+}
+
+#words-content .modal-header,
+#words-content .modal-footer {
+  font-size: 1.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+}
+
+#words-content .modal-header {
+  text-align: center;
+}
+
+#words-content .modal-header-icon {
+  position: absolute;
+  right: 12px;
+}
+
+#words-content .modal-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-shadow: 1px 1px black;
+}
+
 
 /* words view
   ========================================================================== */
@@ -126,21 +211,9 @@
   list-style: none;
 }
 
-#words-view .word-item {
-  display: grid;
-  grid-template-columns: 15% 85%;
-  position: relative;
-  min-height: 30%;
-  margin-bottom: 6px;
-  border: 1px solid gray;
-  border-top-right-radius: 12px;
-}
-
-#words-view .word-item:first-child {
-  margin-top: 6px;
-}
-
 #words-view .word-metrics {
+  display: grid;
+  grid-template-rows: auto;
   border-right: 1px solid rgb(255, 136, 77);
 }
 
@@ -148,14 +221,11 @@
   border: 1px solid rgb(255, 136, 77);
 }
 
-#words-view .word-name {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.5rem;
-  font-style: italic;
-  height: 2.5rem;
-  line-height: 2.5rem;
-  padding-left: 12px;
-  border-top-right-radius: 12px;
+#words-view .btn-metric {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  border-bottom: 1px solid gray;
 }
 
 #words-view .word-name.info {
@@ -166,6 +236,18 @@
 #words-view .definition.info {
   width: 100%;
   left: 0;
+}
+
+#words-view .syllables {
+  font-size: 80%;
+  opacity: 0.8;
+  padding-left: 12px;
+}
+
+#words-view .example {
+  padding-left: 24px;
+  font-size: 70%;
+  opacity: 0.8;
 }
 
 /* add word view
@@ -226,21 +308,7 @@
   list-style: none;
 }
 
-#add-word-view .search-result {
-  display: grid;
-  grid-template-columns: 15% 85%;
-  position: relative;
-  min-height: 30%;
-  margin-bottom: 6px;
-  border: 1px solid gray;
-  border-top-right-radius: 12px;
-}
-
-#add-word-view .search-result:first-child {
-  margin-top: 6px;
-}
-
-#add-word-view .btn-add-word {
+#add-word-view .btn-open-add-word-modal {
   border-right: 1px solid rgb(255, 136, 77);
 }
 
