--- a/app/templates/words.addword.modal.html
+++ b/app/templates/words.addword.modal.html
@@ -63,8 +63,8 @@
     <!-- Footer: Confirm / Cancel Buttons -->
     <footer class="modal-footer">
       <!-- Confirm -->
-      <div class="bg-theme" ng-click="words.btnAddWord()">
-        <div class="ion-checkmark-round centered"></div>
+      <div class="bg-dark" ng-click="words.btnAddWord()">
+        <div class="ion-checkmark-round centered txt-theme"></div>
       </div>
       <!-- Cancel -->
       <div class="bg-slate" ng-click="words.btnCloseAddWordModal()">
