--- a/app/templates/words.userwords.modal.html
+++ b/app/templates/words.userwords.modal.html
@@ -60,9 +60,9 @@
         </div>
       <!-- Confirm Delete / Cancel -->
         <!-- Confirm Delete -->
-        <div class="bg-wrong" ng-click="words.btnConfirmRemoveWord()"
+        <div class="bg-dark" ng-click="words.btnConfirmRemoveWord()"
           ng-show="words.removeWordFlag">
-          <div class="ion-checkmark-round centered"></div>
+          <div class="ion-checkmark-round centered txt-theme"></div>
         </div>
         <!-- Cancel -->
         <div class="bg-slate" ng-click="words.btnCancelRemoveWord()"
