--- a/app/templates/words.userwords.html
+++ b/app/templates/words.userwords.html
@@ -66,7 +66,7 @@
         <!-- Word Info -->
         <div>
           <!-- Word Name -->
-          <header class="word-name bg-dark txt-theme">
+          <header class="word-name bga-dark txt-theme">
             {{ word.name }}
             <div class="word-success-rate bga-gray">
               <span class="ion-flash txt-theme"></span> {{ word.successRate | number: 0 }}%
