--- a/app/templates/words.addword.modal.html
+++ b/app/templates/words.addword.modal.html
@@ -63,11 +63,11 @@
     <!-- Footer: Confirm / Cancel Buttons -->
     <footer class="modal-footer">
       <!-- Confirm -->
-      <div class="bg-dark" ng-click="words.btnAddWord()">
+      <div class="btn bg-dark" ng-click="words.btnAddWord()">
         <div class="ion-checkmark-round centered txt-theme"></div>
       </div>
       <!-- Cancel -->
-      <div class="bg-slate" ng-click="words.btnCloseAddWordModal()">
+      <div class="btn bg-slate" ng-click="words.btnCloseAddWordModal()">
         <div class="ion-close-round centered"></div>
       </div>
     </footer>
