--- a/app/templates/words.addword.html
+++ b/app/templates/words.addword.html
@@ -41,7 +41,7 @@
   </div>
   <!-- Search Results -->
   <div id="search-results-box">
-    <ul id="list-search-results">
+    <ul class="word-list">
       <!-- List Item: Definition -->
       <li class="word-item"
           ng-repeat="result in words.searchResults"
