--- a/app/templates/words.addword.html
+++ b/app/templates/words.addword.html
@@ -10,7 +10,7 @@
   <ng-include src="'/templates/words.addword.modal.html'"></ng-include>
   <!-- Add Word Input -->
   <header class="header-word-search">
-    <form id="form-add-word-search" name="formAddWordSearch" autocomplete="off">
+    <form id="form-add-word-search" class="header-bar" name="formAddWordSearch" autocomplete="off">
       <input type="text" id="add-word-input" class="bga-dark" name="searchAddWord" autocomplete="off"
         ng-model="words.searchAddWord" placeholder="scholarly" required >
       <button type="submit" class="ion-search btn bg-theme"
