--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -24,6 +24,10 @@
 }
 
 #viewport {
+  background-image: url('/assets/images/bg-mobile.jpeg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 25% 0;
   position: relative;
   width: 100%;
   height: 100vh;
